an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
12/17/2025:
[+] Fixed Happy Wheels levels not loading. (Had to make a whole semi-proxy
for this) (Thanks for the bug reports mango 67, colin, daddy, Oedipus33, 
Joshua Daniel Ronald Wheeler and TimTheFlyWhiteGuy)
[+] Should have finally fully fixed the failed to fetch in the A.I. (Thanks
for the bug reports KLG, Vin and Khabylame_MECH)
[+] Added Deltarune Chapters 1-4 (Thanks for the suggestions o-333,
Floor_Popcorn and Ilovegames(notjustthissite))

12/16/2025:
[+] Added a "Random Game" feature.
[+] Added Fruit Ninja
[+] Added GunSpin (Thanks for the suggestion BIG_B & Lucas M.)

12/15/2025:
[+] Fixed The Binding of Isaac: Wrath of the Lamb (and fixed the typo in the
name) (Thanks for the bug reports colin lowkey chill, aaahhhhhh123, your 
mom, Zsredd & tomas quintero)
[+] Added Happy Wheels (Thanks for the suggestion adrian the explainer)
[+] Added The Legend of Zelda: Majora's Mask (Thanks for the suggestion
li stan)
[+] Added Pokémon: Ruby Version (Thanks for the suggestion KLG)
[+] Added Pokémon: Sapphire Version (Thanks for the suggestion KLG)
[+] Added Tecmo Super Bowl (Thanks for the suggestion)
[+] Added OvO (Thanks for the suggestion)

12/14/2025:
[!] Added seperate Subway Surfers games.
[+] Added Subway Surfers: Barcelona, Beijing, Buenos Aires, Havana, Houston,
Iceland, London, Mexico, Miami, Monaco, New Orleans, San Francisco (this was
the one already on No Name Games), Saint Petersburg, Winter Holiday, and
Zurich
[+] Added Five Nights at Freddy's: Sister Location
[+] Added Five Nights at Freddy's: Ultimate Custom Night (Thanks for the 
suggestion Mm)